fixed scrollbar on landing page slidesohw

--- a/src/app.css
+++ b/src/app.css
@@ -300,6 +300,15 @@ button {
 	scrollbar-width: none; 
 }
 
+.no-scrollbar::-webkit-scrollbar {
+	display: none;
+}
+
+.no-scrollbar{
+	-ms-overflow-style: none; 
+	scrollbar-width: none; 	
+}
+
 /* body .scroll-container{
 	display: none;
 } */
